Small change in the page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Muhammad Ali!</title>
 </head>
 <body>
-<h1>Hello Muhammad Ali!<h1>
+<h1>Hello Muhammad Ali! and i am doing well<h1>
 </body>
 </html>
